# MultiVideoCapture

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/app/: CMakeLists.txt
src/app/MultiVideoCapture_test/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/MultiVideoCapture/: CMakeLists.txt  FrameType.hpp  MultiVideoCapture.cpp  MultiVideoCapture.hpp  VideoCaptureType.cpp  VideoCaptureType.hpp
